Fix: try to fix og:image

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <meta property="og:description" content="Story of the HolySquad">
         <meta property="og:type" content="website">
         <meta property="og:url" content="https://corentinl5.github.io/HolySquadStory/">
-        <meta property="og:image" content="assets/images/HOLY_Logo_Menu_280x.png">
+        <meta property="og:image" content="https://corentinl5.github.io/HolySquadStory/assets/images/HOLY_Logo_Menu_280x.png">
         <!--<meta property="og:locale" content="fr_FR">-->
 
         <meta name="twitter:card" content="summary">
