--- a/index.html
+++ b/index.html
@@ -13,22 +13,29 @@
 
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
+
+        <title>HolySquadStory</title>
+        <meta name="description" content="Story of the HolySquad">
+
+        <meta property="og:url" content="https://corentinl5.github.io/HolySquadStory/index.html">
+        <meta property="og:type" content="website">
         <meta property="og:title" content="HolySquadStory">
         <meta property="og:description" content="Story of the HolySquad">
-        <meta property="og:type" content="website">
-        <meta property="og:url" content="https://corentinl5.github.io/HolySquadStory/">
         <meta property="og:image" content="https://corentinl5.github.io/HolySquadStory/assets/images/HOLY_Logo_Menu_280x.png">
-        <!--<meta property="og:locale" content="fr_FR">-->
 
-        <meta name="twitter:card" content="summary">
-        <meta name="twitter:creator" content="@tarumo2246">
+        <meta name="twitter:card" content="summary_large_image">
+        <meta property="twitter:domain" content="corentinl5.github.io">
+        <meta property="twitter:url" content="https://corentinl5.github.io/HolySquadStory/index.html">
+        <meta name="twitter:title" content="HolySquadStory">
+        <meta name="twitter:description" content="Story of the HolySquad">
+        <meta name="twitter:image" content="https://corentinl5.github.io/HolySquadStory/assets/images/HOLY_Logo_Menu_280x.png">
+
 
         <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
         <link rel="manifest" href="assets/favicon/site.webmanifest">
 
-        <title>Timeline</title>
         <link rel="stylesheet" href="styles/timeline.css">
         <link rel="stylesheet" href="styles/styles.css">
     </head>
