Style: Changed all the events style

--- a/index.html
+++ b/index.html
@@ -34,25 +34,28 @@
         <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
-        <link rel="manifest" href="assets/favicon/site.webmanifest">
+        <link rel="manifest" href="assets/favicon/site.webmanifest" crossorigin="use-credentials">
 
         <link rel="stylesheet" href="styles/timeline.css">
         <link rel="stylesheet" href="styles/styles.css">
+
+        <script src="https://kit.fontawesome.com/67823d9271.js" crossorigin="anonymous"></script>
     </head>
     <body>
         <header>
-            <img src="assets/images/HOLY_Logo_Menu_280x.png" alt="HolySquad logo">
+            <img src="assets/logo/HOLY_Logo_Menu_280x.png" alt="HolySquad logo">
             <a href="https://github.com/CorentinL5/HolySquadStory/" target="_blank" rel="noopener noreferrer"><p>Github Project</p></a>
             <h1>HolySquad Story</h1>
             <ul>
-                <li><a href="https://fr.weareholy.com" target="_blank" rel="noopener noreferrer">fr</a></li>
-                <li><a href="https://uk.weareholy.com" target="_blank" rel="noopener noreferrer">uk</a></li>
-                <li><a href="https://de.weareholy.com" target="_blank" rel="noopener noreferrer">de</a></li>
+                <li><a href="https://fr.weareholy.com" target="_blank" rel="noopener noreferrer"><img src="assets/flags/flag-fr.svg" alt="flag-fr"></a></li>
+                <li><a href="https://uk.weareholy.com" target="_blank" rel="noopener noreferrer"><img src="assets/flags/flag-gb.svg" alt="flag-gb"></a></li>
+                <li><a href="https://de.weareholy.com" target="_blank" rel="noopener noreferrer"><img src="assets/flags/flag-de.svg" alt="flag-de"></a></li>
             </ul>
-
         </header>
 
-        <ul id="timeline"></ul>
+        <div id="HolySquadStory">
+
+        </div>
 
         <script src="scripts/script.js"></script>
     </body>
