Fix: Some issues and improve styles

--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
     </head>
     <body>
         <header>
-            <img src="assets/logo/HOLY_Logo_Menu_280x.png" alt="HolySquad logo">
+            <a href="./">
+                <img src="assets/logo/HOLY_Logo_Menu_280x.png" alt="HolySquad logo">
+            </a>
             <a href="https://github.com/CorentinL5/HolySquadStory/" target="_blank" rel="noopener noreferrer">
                 <p data-translate="githubProject">Github Project</p>
             </a>
